<resources>
    <string name="app_name">Calculator</string>

    <string name="m_plus">M+</string>
    <string name="m_minus">M-</string>
    <string name="m_r">MR</string>
    <string name="m_c">MC</string>
    <string name="c">C</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">,</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="erase">-x</string>
    <string name="brackets">( )</string>
    <string name="action_settings">Settings</string>

    <string name="result_string">= %1$s</string>
</resources>
