<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="#ff000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:id="@+id/inputScrollView"
            android:fillViewport="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/input_string"
                android:layout_marginRight="10dp"
                android:textColor="#ff03ccb5"
                android:textSize="28sp"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginTop="10dp" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/output_string"
            android:textColor="#ff03ccb5"
            android:textSize="44sp"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonMAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/m_plus"
            android:background="#ff03ccb5"
            android:textSize="22sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonMSub"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/m_minus"
            android:background="#ff03ccb5"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonMReg"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/m_r"
            android:background="#ff03ccb5"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonMClear"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/m_c"
            android:background="#ff03ccb5"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonClear"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/c"
            android:background="#ffc8a034"
            android:textSize="22sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/percent"
            android:background="#ff3b3b3b"
            android:textSize="22sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:background="#ff3b3b3b"
            android:textSize="22sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonErase"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/erase"
            android:background="#ffbd2615"
            android:textSize="22sp"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3">

        <Button
            android:id="@+id/button7"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button8"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button9"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3">

        <Button
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3">

        <Button
            android:id="@+id/button1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3">

        <Button
            android:id="@+id/button0"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/brackets"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/brackets"
            android:background="#ff3b3b3b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:background="#ff2b2b2b"
            android:textSize="30sp"
            android:textColor="#ffffffff" />

    </LinearLayout>
</LinearLayout>
